--- a/style.css
+++ b/style.css
@@ -17,8 +17,25 @@ html, body {
 }
 
 .main {
+    display: block;
     width: 100%;
     height: 100%;
+}
+
+#play-area-graphics {
+    width: 100%;
+    height: 100%;
+    display: block;
+    background-color: transparent;
+}
+
+#player-log {
+    font-size: 0.5em;
+    color: darkorange;
+    text-shadow: 1px 1px 2px black;
+    opacity: 0;
+    position: absolute;
+    z-index: 420;
 }
 
 .player-stats {
